Major change to DataSource: data sources now store Comparable objects instead of Number objects. This way strings can finally be stored for labels or descriptions; Added StatefulTokenizer to util package for more advanced text processing; Changed CSVReader to utilize a StatefulTokenizer: CSVReader now supports quoting; Added more unit tests for CSVReader; Replaced HTML formatting in JavaDoc by JavaDoc @-syntax where possible